musica (2.3) unreleased; urgency=low

  * jplayer.php: start playing on page load

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 21 May 2010 08:38:48 -0500

musica (2.2-0ubuntu1) maverick; urgency=low

  * index.php: support https protocol
  * index.php, jplayer.php, jplayer/skin/jplayer.blue.monday.css:
    - rearrange the player's css to make it a little less wide
  * jplayer.php: default to the flash player for now; should eventually
    add logic to determine native vs. flash

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 21 May 2010 08:38:41 -0500

musica (2.1-0ubuntu1) maverick; urgency=low

  * index.php: handle files that have multiple dots in the filename

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 19 May 2010 11:44:13 -0500

musica (2.0-0ubuntu1) maverick; urgency=low

  Add jPlayer (GPLv3) as an embedded javascript/flash mp3 player
  * debian/control, debian/install, debian/rules, index.php,
    jplayer.php, jplayer/js/Jplayer.as, jplayer/js/jquery.jplayer.min.js,
    jplayer/skin/jplayer.blue.monday.css: LP: #555347
  * debian/copyright: updated license info

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 18 May 2010 12:00:12 -0500

musica (1.11-0ubuntu1) lucid; urgency=low

  * debian/postrm: dissite and rm etc config

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Feb 2010 19:02:42 -0600

musica (1.10) lucid; urgency=low

  * debian/postrm: safely clean up

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Feb 2010 12:19:35 -0600

musica (1.9) lucid; urgency=low

  * debian/postinst: cache no longer used
  * debian/postrm: clean up link and statistics

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Feb 2010 12:14:54 -0600

musica (1.8) lucid; urgency=low

  * debian/cron.hourly, debian/rules:
    - maintain an hourly updated list of artists/albums/songs, for
      more efficient and secure printing of statists and doing searches
  * debian/rules: drop debconf stuff, as it's not used
  * index.php:
    - read statistics from file